--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -192,6 +192,7 @@
   margin: 10px 0;
   float: right;
   padding-bottom: 20px;
+  width: fit-content;
   .newpost--new--profile {
     color: white !important;
     background-color: #2a2a2a;
