--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -41,28 +41,30 @@
   <% end %>
 
   <% if (!@pitch.status.eql? "Rejected") && (!@pitch.status.eql? "Ready for Review") %>
-    <% if @claimed_user.nil? %>
-      <%= form_for @post do |f| %>
-        <%= f.hidden_field :title, value: @pitch.title %>
-        <%= f.hidden_field :content, value: @pitch.description %>
-        <%= f.hidden_field :category_id, value: @pitch.category_id %>
-        <%= f.hidden_field :pitch_id, value: @pitch.id %>
-        <%= f.submit "Claim Article Pitch", data: { confirm: "You will have two weeks to write and submit this article." } %>
-      <% end %>
-    <% else %>
-      <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %> on <%= @article.created_at.strftime('%A, %B %d') %></p>
-      <% if !@article.is_published? %>
-        <% if @claimed_user.id == current_user.id || current_user.admin? %>
-          <%= form_for @pitch do |f| %>
-            <%= f.hidden_field :claimed_id, value: nil %>
-            <p class="pitch_usr">Go to this pitch's <%= link_to("article", @article, class: "pitch_btn") %>.<br>Note: If you unclaim this pitch, any writer will be able to claim it. The associated article will become locked unless you claim the pitch again.</p>
-            <%= f.submit "Unclaim Pitch", data: { confirm: "Are you sure you want to unclaim this pitch? You will no longer be able to work on this article." }  %>
-          <% end %>
+    <% if (current_user.id.eql? @pitch.user.id) || @pitch.user.editor %>
+      <% if @claimed_user.nil? %>
+        <%= form_for @post do |f| %>
+          <%= f.hidden_field :title, value: @pitch.title %>
+          <%= f.hidden_field :content, value: @pitch.description %>
+          <%= f.hidden_field :category_id, value: @pitch.category_id %>
+          <%= f.hidden_field :pitch_id, value: @pitch.id %>
+          <%= f.submit "Claim Article Pitch", data: { confirm: "You will have two weeks to write and submit this article." } %>
         <% end %>
       <% else %>
-        <p class="pitch_usr">This pitch's <%= link_to("article", @article, class: "pitch_btn") %> was published on <%= @article.publish_at.strftime("%A, %B %d") %>.</p>
+        <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %> on <%= @article.created_at.strftime('%A, %B %d') %></p>
+        <% if !@article.is_published? %>
+          <% if @claimed_user.id == current_user.id || current_user.admin? %>
+            <%= form_for @pitch do |f| %>
+              <%= f.hidden_field :claimed_id, value: nil %>
+              <p class="pitch_usr">Go to this pitch's <%= link_to("article", @article, class: "pitch_btn") %>.<br>Note: If you unclaim this pitch, any writer will be able to claim it. The associated article will become locked unless you claim the pitch again.</p>
+              <%= f.submit "Unclaim Pitch", data: { confirm: "Are you sure you want to unclaim this pitch? You will no longer be able to work on this article." }  %>
+            <% end %>
+          <% end %>
+        <% else %>
+          <p class="pitch_usr">This pitch's <%= link_to("article", @article, class: "pitch_btn") %> was published on <%= @article.publish_at.strftime("%A, %B %d") %>.</p>
+        <% end %>
       <% end %>
-    <% end %>
+    <% end %> 
   <% end %>
 
   <% if (@pitch.user.id.eql? current_user.id) && !@article.try(:is_published?) %>
