--- a/app/views/users/onboarding/_welcome.html.erb
+++ b/app/views/users/onboarding/_welcome.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="onboarding_page_container">
   <div id="onboarding_page">
-    <h3>We grow as writers, as influencers, as leaders, together</h3>
+    <h3>We grow as writers, as journalists, as leaders, together</h3>
     <p>Congratulations on being accepted as a writer for The Teen Magazine! Our community of talented and young writers
       inspire and support each other into becoming part of the next generation of
        leaders.</p>
