--- a/app/views/welcome/_signup.html.erb
+++ b/app/views/welcome/_signup.html.erb
@@ -14,7 +14,7 @@
               <div id="mce-success-response" style="display:none"></div>
             </div>
            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div class="mccontainer">
+            <div class="mccontainer mc-field-group">
                <div class="flex--email">
                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
