--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="page-footer font-small stylish-color-dark pt-4">
   <!-- Footer Links -->
-  <div class="container text-center text-md-left">
+  <div class="wrapper_home text-center text-md-left" style="margin-bottom: 0;">
     <!-- Grid row -->
       <!-- Content -->
     <div class="title-footer">
@@ -57,13 +57,13 @@
       <!-- Grid column -->
     </div>
     <!-- Grid row -->
+    <div class="py-3">
+      <span><i>© 2020 TheTeenMagazine.com</i></span>
+    </div>
+    <br>
   </div>
   <!-- Footer Links -->
   <!-- Copyright -->
-  <div class="container footer-copyright py-3">
-    <span><i>© 2020 TheTeenMagazine.com</i></span>
-  </div>
-  <br>
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
