--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -561,6 +561,12 @@ html, body {
     width: 100% !important;
     padding: 0 !important;
     min-height: 35px !important;
+    .clear {
+      input {
+        width: fit-content !important;
+        padding: 0 22px !important;
+      }
+    }
   }
   #mce-error-response, #mce-success-response {
     margin-top: 10px;
